--- a/index.html
+++ b/index.html
@@ -9,34 +9,31 @@
       href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css"
     />
     <link rel="stylesheet" type="text/css" href="main.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <nav role="navigation">Nav</nav>
+    <nav role="navigation">
+      <span>about</span>
+      <span>resume</span>
+    </nav>
     <main role="main">
       <header role="banner">
-        <h1>Hero</h1>
+        <h1>
+          I am a fullstack software developer with a passion for design and
+          functionality.
+        </h1>
       </header>
 
       <section>
-        <h2>Portfolio</h2>
+        <h2>Project1</h2>
       </section>
-
       <section>
-        music quiz
-      </section>
-
-      <section>
-        Section 3
-      </section>
-
-      <section>
-        Project 3
-      </section>
-
-      <section>
-        Section 4
+        <h2>Project1</h2>
       </section>
     </main>
-    <footer role="content-info">Footer</footer>
+    <footer role="content-info">social links</footer>
   </body>
 </html>
