--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <main role="main">
       <header role="banner">
         <h1>
-          I am a fullstack software developer with a passion for design and
-          functionality.
+          Chayce Knaub
         </h1>
+        <h2>Project Portfolio</h2>
       </header>
 
       <section>
