--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   </head>
   <body>
     <nav role="navigation">
-      <span>about</span>
-      <span>resume</span>
+      <ul>
+        <li><a href="about.html">about</a></li>
+        <li><a href="resume.html">resume</a></li>
+      </ul>
     </nav>
     <main role="main">
       <header role="banner">
