quiz images added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <nav role="navigation">
       <ul>
+        <li><a href="index.html">home</a></li>
         <li><a href="about.html">about</a></li>
         <li><a href="resume.html">resume</a></li>
       </ul>
@@ -29,11 +30,29 @@
         <h2>Project Portfolio</h2>
       </header>
 
-      <section>
-        <h2>Project1</h2>
+      <section class=" project-container">
+        <h2>Music Theory Quiz</h2>
+        <img src="images/quiz1.png" alt="desktop" />
+        <img src="images/quizmobile.png" alt="mobile" />
+        <p>
+          this is the description of the app. It is going to be a few sentences
+          long explaing the app and the technology used. there is going to be a
+          link to site and github repo.
+        </p>
+        <a href="livesite">site</a>
+        <a href="https://github.com/challey17/Portfolio.git">repo</a>
       </section>
-      <section>
-        <h2>Project1</h2>
+      <section class="project-container">
+        <h2>APIthings</h2>
+        <img src="" alt="" />
+        <img src="" alt="" />
+        <p>
+          this is the description of the app. It is going to be a few sentences
+          long explaing the app and the technology used. there is going to be a
+          link to site and github repo.
+        </p>
+        <a href="livesite">site</a>
+        <a href="https://github.com/challey17/Portfolio.git">repo</a>
       </section>
     </main>
     <footer role="content-info">social links</footer>
