--- a/index.html
+++ b/index.html
@@ -19,27 +19,26 @@
       <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="about.html">about</a></li>
-        <li><a href="resume.html">resume</a></li>
       </ul>
     </nav>
-    <main role="main">
-      <header role="banner">
-        <h1>
-          Chayce Knaub
-        </h1>
-        <h2>Project Portfolio</h2>
-      </header>
 
+    <header class="main-page-header" role="banner">
+      <!--<img src="images/zhang-kenny-E163LGOdZnw-unsplash.jpg" alt="desktop" />-->
+      <h1>
+        Chayce Knaub
+      </h1>
+      <h2>Project Portfolio</h2>
+    </header>
+    <main role="main">
       <section class=" project-container">
-        <h2>Music Theory Quiz</h2>
         <img src="images/quiz1.png" alt="desktop" />
-        <img src="images/quizmobile.png" alt="mobile" />
+
         <p>
           this is the description of the app. It is going to be a few sentences
           long explaing the app and the technology used. there is going to be a
           link to site and github repo.
         </p>
-        <a href="livesite">site</a>
+        <a href="https://challey17.github.io/MusicQuiz/">site</a>
         <a href="https://github.com/challey17/Portfolio.git">repo</a>
       </section>
       <section class="project-container">
