--- a/about.html
+++ b/about.html
@@ -31,12 +31,13 @@
         <p>
           My passion is creating intelligent well-designed applications that
           work at a high level and offer ease of use and accessibility.
-          Something about client side, server side shit.
+          Something about client side, server side when i know more about server
+          side.
         </p>
-        <a href="livesite">site</a>
-        <a href="https://github.com/challey17/Portfolio.git">repo</a>
+        <a href="livesite">linkedin</a>
+        <a href="https://github.com/challey17">github</a>
       </section>
     </main>
-    <footer role="content-info">social links</footer>
+    <footer role="content-info">&copy; 2020 Chayce Knaub</footer>
   </body>
 </html>
