--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
         <img src="images/quiz1.png" alt="desktop" />
 
         <p>
-          this is the description of the app. It is going to be a few sentences
-          long explaing the app and the technology used. there is going to be a
-          link to site and github repo.
+          This is a quiz covering the basic concepts of music theory. This
+          application was built using HTML , CSS , Javascript and Jquery.
         </p>
         <a href="https://challey17.github.io/MusicQuiz/">site</a>
         <a href="https://github.com/challey17/Portfolio.git">repo</a>
@@ -53,6 +52,6 @@
         <a href="https://github.com/challey17/Portfolio.git">repo</a>
       </section>
     </main>
-    <footer role="content-info">social links</footer>
+    <footer role="content-info">&copy; 2020 Chayce Knaub</footer>
   </body>
 </html>
