getting close designwise

--- a/about.html
+++ b/about.html
@@ -15,19 +15,22 @@
     />
   </head>
   <body>
-    <nav role="navigation">
-      <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="about.html">about</a></li>
-      </ul>
-    </nav>
-    <header class="about-page-header"></header>
+    <header class="about-page-header">
+      <nav role="navigation">
+        <ul>
+          <li><a href="index.html">home</a></li>
+          <li><a href="about.html">about</a></li>
+        </ul>
+      </nav>
+    </header>
     <main class="about-main" role="main">
       <section>
+        <hr />
         <h2>
           I am a fullstack software developer with a passion for design and
           functionality.
         </h2>
+        <hr />
         <p>
           My passion is creating intelligent well-designed applications that
           work at a high level and offer ease of use and accessibility.
