--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
       </h1>
       <h2>Project Portfolio</h2>
     </header>
+    <section>
+      <p>language icons here?</p>
+    </section>
     <main role="main">
       <section class=" project-container">
         <img src="images/quiz1.png" alt="desktop" />
 
         <p>
           This is a quiz covering the basic concepts of music theory. This
-          application was built using HTML , CSS , Javascript and Jquery.
+          application was built using HTML, CSS, Javascript and JQuery.
         </p>
         <a href="https://challey17.github.io/MusicQuiz/">site</a>
         <a href="https://github.com/challey17/Portfolio.git">repo</a>
