icons,compressed imgs

--- a/about.html
+++ b/about.html
@@ -35,9 +35,17 @@
           My passion is creating intelligent well-designed applications that
           work at a high level and offer ease of use and accessibility.
           Something about client side, server side when i know more about server
-          side.
+          side. I enjoy learning and growing as a developer and otherwise and am
+          always eager to learn more by collaborating or in my own projects.
         </p>
-        <a href="livesite">linkedin</a>
+        <p>
+          I am a lifelong artist. I have written and recorded multiple albums
+          myself and also in collaboration with other musicians. As a
+          contemporary artist I sell and exhibit my work, primarily watercolor
+          paintings and charcoal drawings, regularly. I have been meditating for
+          10 years and have a daily practice which is very meaningful to me.
+        </p>
+        <a href="https://www.linkedin.com/in/cknaub/">linkedin</a>
         <a href="https://github.com/challey17">github</a>
       </section>
     </main>
