--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
       </h1>
       <h2>Project Portfolio</h2>
     </header>
-    <section>
-      <p>language icons here?</p>
+    <section class="language-icons">
+      <div class="html"></div>
+      <div class="css"></div>
+      <div class="js"></div>
+      <!--<div class="react"></div>
+      <div class="nodejs"></div>-->
     </section>
     <main role="main">
       <section class=" project-container">
