--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="images/" />
   </head>
   <body>
     <header class="main-page-header" role="banner">
