media queries added

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Chayce Knaub</title>
+    <title>About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -32,19 +32,21 @@
         </h2>
         <hr />
         <p>
-          My passion is creating intelligent well-designed applications that
-          work at a high level and offer ease of use and accessibility.
-          Something about client side, server side when i know more about server
-          side. I enjoy learning and growing as a developer and otherwise and am
-          always eager to learn more by collaborating or in my own projects.
+          My goal is to create intelligent well-designed applications that work
+          at a high level and offer ease of use and accessibility. Something
+          about client side, server side when i know more about server side. I
+          enjoy learning and growing and am always eager to learn more by
+          collaborating or in my own projects.
         </p>
         <p>
-          I am a lifelong artist. I have written and recorded multiple albums
-          myself and also in collaboration with other musicians. As a
-          contemporary artist I sell and exhibit my work, primarily watercolor
-          paintings and charcoal drawings, regularly. I have been meditating for
-          10 years and have a daily practice which is very meaningful to me.
+          I am a lifelong artist. I have written and recorded multiple albums as
+          a songwriter and bandleader. As a contemporary artist I sell and
+          exhibit my work- primarily watercolor paintings and charcoal drawings.
+          I have been meditating for 10 years and have a daily practice which is
+          very meaningful to me.
         </p>
+        <h2>Contact</h2>
+        <a href="mailto:chknaub@yahoo.com">email</a>
         <a href="https://www.linkedin.com/in/cknaub/">linkedin</a>
         <a href="https://github.com/challey17">github</a>
       </section>
