--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img src="images/quiz1.png" alt="desktop" />
 
         <p>
-          This is a quiz covering the basic concepts of music theory. This
+          An interactive quiz covering the basic concepts of music theory. This
           application was built using HTML, CSS, Javascript and JQuery.
         </p>
         <a href="https://challey17.github.io/MusicQuiz/">site</a>
