grammar errors fixed

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <p>
           My goal is to create intelligent well-designed applications that work
           at a high level and offer ease of use and accessibility. Something
-          about client side, server side when i know more about server side. I
+          about client side, server side when I know more about server side. I
           enjoy learning and growing and am always eager to learn more by
           collaborating or in my own projects.
         </p>
