--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <img src="" alt="" />
         <p>
           this is the description of the app. It is going to be a few sentences
-          long explaing the app and the technology used. there is going to be a
-          link to site and github repo.
+          long explaining the app and the technology used. there is going to be
+          a link to site and github repo.
         </p>
         <a href="livesite">site</a>
         <a href="https://github.com/challey17/Portfolio.git">repo</a>
