--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     />
   </head>
   <body>
-    <header class="main-page-header" role="banner">
-      <nav role="navigation">
+    <header class="main-page-header">
+      <nav>
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="about.html">about</a></li>
@@ -32,9 +32,9 @@
       <div class="css"></div>
       <div class="js"></div>
     </section>
-    <main role="main">
+    <main>
       <section class=" project-container">
-        <img src="images/quiz1.png" alt="desktop" />
+        <img src="images/quiz1.png" alt="music quiz image" />
 
         <p>
           An interactive quiz covering the basic concepts of music theory. This
@@ -45,8 +45,7 @@
       </section>
       <section class="project-container">
         <h2>APIthings</h2>
-        <img src="" alt="" />
-        <img src="" alt="" />
+
         <p>
           this is the description of the app. It is going to be a few sentences
           long explaining the app and the technology used. there is going to be
@@ -56,6 +55,6 @@
         <a href="https://github.com/challey17/Portfolio.git">repo</a>
       </section>
     </main>
-    <footer role="content-info">&copy; 2020 Chayce Knaub</footer>
+    <footer role="contentinfo">&copy; 2020 Chayce Knaub</footer>
   </body>
 </html>
