--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
           My goal is to create intelligent well-designed applications that work
           at a high level and offer ease of use and accessibility. Something
           about client side, server side when I know more about server side. I
-          enjoy learning and growing and am always eager to learn more by
-          collaborating or in my own projects.
+          enjoy learning and am always eager to learn more by collaborating with
+          a team of great programmers or in my own projects.
         </p>
         <p>
           I am a lifelong artist. I have written and recorded multiple albums as
@@ -51,6 +51,6 @@
         <a href="https://github.com/challey17">github</a>
       </section>
     </main>
-    <footer role="content-info">&copy; 2020 Chayce Knaub</footer>
+    <footer>&copy; 2020 Chayce Knaub</footer>
   </body>
 </html>
