took out footer role

--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
         <a href="https://github.com/challey17/Portfolio.git">repo</a>
       </section>
     </main>
-    <footer role="contentinfo">&copy; 2020 Chayce Knaub</footer>
+    <footer>&copy; 2020 Chayce Knaub</footer>
   </body>
 </html>
