--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="about.html">about</a></li>
+          <li><a href="contact.html" target="_blank">contact</a></li>
         </ul>
       </nav>
       <h1>
@@ -40,8 +41,12 @@
           An interactive quiz covering the basic concepts of music theory. This
           application was built using HTML, CSS, Javascript and JQuery.
         </p>
-        <a href="https://challey17.github.io/MusicQuiz/">site</a>
-        <a href="https://github.com/challey17/Portfolio.git">repo</a>
+        <a href="https://challey17.github.io/MusicQuiz/" target="_blank"
+          >site</a
+        >
+        <a href="https://github.com/challey17/Portfolio.git" target="_blank"
+          >repo</a
+        >
       </section>
       <section class="project-container">
         <h2>APIthings</h2>
@@ -51,8 +56,10 @@
           long explaining the app and the technology used. there is going to be
           a link to site and github repo.
         </p>
-        <a href="livesite">site</a>
-        <a href="https://github.com/challey17/Portfolio.git">repo</a>
+        <a href="livesite" target="_blank">site</a>
+        <a href="https://github.com/challey17/Portfolio.git" target="_blank"
+          >repo</a
+        >
       </section>
     </main>
     <footer>&copy; 2020 Chayce Knaub</footer>
