--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>About</title>
+    <title>about</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -18,8 +18,9 @@
     <header class="about-page-header">
       <nav role="navigation">
         <ul>
-          <li><a href="index.html">home</a></li>
-          <li><a href="about.html">about</a></li>
+          <li><a href="index.html" target="_blank">home</a></li>
+          <li><a href="about.html" target="_blank">about</a></li>
+          <li><a href="contact.html" target="_blank">contact</a></li>
         </ul>
       </nav>
     </header>
@@ -45,10 +46,6 @@
           I have been meditating for 10 years and have a daily practice which is
           very meaningful to me.
         </p>
-        <h2>Contact</h2>
-        <a href="mailto:chknaub@yahoo.com">email</a>
-        <a href="https://www.linkedin.com/in/cknaub/">linkedin</a>
-        <a href="https://github.com/challey17">github</a>
       </section>
     </main>
     <footer>&copy; 2020 Chayce Knaub</footer>
