removed unnecessary roles

--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@
     <header class="about-page-header">
       <nav role="navigation">
         <ul>
-          <li><a href="index.html" target="_blank">home</a></li>
-          <li><a href="about.html" target="_blank">about</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="about.html">about</a></li>
           <li><a href="contact.html" target="_blank">contact</a></li>
         </ul>
       </nav>
     </header>
-    <main class="about-main" role="main">
+    <main class="about-main">
       <section>
         <hr />
         <h2>
@@ -36,8 +36,8 @@
           My goal is to create intelligent well-designed applications that work
           at a high level and offer ease of use and accessibility. Something
           about client side, server side when I know more about server side. I
-          enjoy learning and am always eager to learn more by collaborating with
-          a team of great programmers or in my own projects.
+          am always eager to learn more by collaborating with a team of great
+          programmers or in my own projects.
         </p>
         <p>
           I am a lifelong artist. I have written and recorded multiple albums as
