--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="about-page-header">
-      <nav role="navigation">
+      <nav>
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="about.html">about</a></li>
@@ -24,7 +24,7 @@
         </ul>
       </nav>
     </header>
-    <main class="about-main" role="main">
+    <main class="about-main">
       <section>
         <h2>Contact</h2>
         <a href="mailto:chknaub@yahoo.com" target="_blank">email</a>
