--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
     <main>
       <section class=" project-container">
-        <img src="images/quiz1.png" alt="image of quiz" />
+        <img src="images/quiz1.png" alt="music quiz" />
 
         <p>
           An interactive quiz covering the basic concepts of music theory. This
