--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     <header class="main-page-header">
       <nav>
         <ul>
-          <li><a href="index.html">home</a></li>
           <li><a href="about.html">about</a></li>
-          <li><a href="contact.html" target="_blank">contact</a></li>
+          <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
       <h1>
@@ -29,12 +28,17 @@
       <h2>Project Portfolio</h2>
     </header>
     <section class="language-icons">
+      <h2>technologies</h2>
+
       <div class="html"></div>
       <div class="css"></div>
       <div class="js"></div>
     </section>
     <main>
       <section class=" project-container">
+        <h1>Projects</h1>
+
+        <h2>Music Quiz</h2>
         <img src="images/quiz1.png" alt="music quiz" />
 
         <p>
