--- a/about.html
+++ b/about.html
@@ -16,11 +16,11 @@
   </head>
   <body>
     <header class="about-page-header">
-      <nav role="navigation">
+      <nav>
         <ul>
           <li><a href="index.html">home</a></li>
-          <li><a href="about.html">about</a></li>
-          <li><a href="contact.html" target="_blank">contact</a></li>
+
+          <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
     </header>
