--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <header class="about-page-header">
       <nav>
         <ul>
-          <li><a href="index.html">home</a></li>
+          <li><a href="index.html">portfolio</a></li>
           <li><a href="about.html">about</a></li>
         </ul>
       </nav>
