--- a/about.html
+++ b/about.html
@@ -40,11 +40,9 @@
           programmers or in my own projects.
         </p>
         <p>
-          I am a lifelong artist. I have written and recorded multiple albums as
-          a songwriter and bandleader. As a contemporary artist I sell and
-          exhibit my work- primarily watercolor paintings and charcoal drawings.
-          I have been meditating for 10 years and have a daily practice which is
-          very meaningful to me.
+          I am also a musician and artist. Being creative has always been a big
+          part of my life. I write and release music on my own and also with
+          others. I enjoy painting and drawing and sometimes exhibit my work.
         </p>
       </section>
     </main>
