--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
           <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
-      <h1>
-        Chayce Knaub
-      </h1>
+      <h1>Chayce Knaub</h1>
       <h2>Project Portfolio</h2>
     </header>
     <section class="language-icons">
@@ -33,33 +31,53 @@
       <div class="html"></div>
       <div class="css"></div>
       <div class="js"></div>
+      <div class="react"></div>
+      <div class="node"></div>
     </section>
     <main>
-      <section class=" project-container">
-        <h2>Projects</h2>
-
-        <img src="images/quiz1.png" alt="music quiz" />
-        <h3>Music Quiz</h3>
+      <section class="project-container">
+        <h2 class="project">Projects</h2>
+        <img src="images/think.png" alt="thinktank app" />
+        <h3>ThinkTank</h3>
         <p>
-          An interactive quiz covering the basic concepts of music theory. This
-          application was built using HTML, CSS, Javascript and JQuery.
+          A full-stack platform for creating and studying flashcards. React,
+          Node.js, Express.js, Knex, Mocha, Chai, RESTful API Endpoints, JWT,
+          PostgresSQL
         </p>
-        <a href="https://challey17.github.io/MusicQuiz/" target="_blank"
-          >site</a
-        >
-        <a href="https://github.com/challey17/Portfolio.git" target="_blank"
+        <a href="https://thinktank-client.vercel.app/" target="_blank">site</a>
+        <a href="https://github.com/challey17/thinktank-client" target="_blank"
           >repo</a
         >
       </section>
       <section class="project-container">
-        <h2>APIthings</h2>
-
+        <img src="images/showerthoughts.png" alt="shower-thoughts" />
+        <h3>Shower Thoughts</h3>
         <p>
-          this is the description of the app. It is going to be a few sentences
-          long explaining the app and the technology used. there is going to be
-          a link to site and github repo.
+          A social media platform based around anonymous data. "Shower thougts"
+          are brief, usually funny, observations about life. Users can create
+          posts without a login, posts are saved on the back end. React,
+          Node.js, Express.js, Knex, Mocha, Chai, RESTful API Endpoints,
+          PostgresSQL
         </p>
-        <a href="livesite" target="_blank">site</a>
+        <a href="https://showerthoughts-client.vercel.app/" target="_blank"
+          >site</a
+        >
+        <a
+          href="https://github.com/challey17/showerthoughts-client.git"
+          target="_blank"
+          >repo</a
+        >
+      </section>
+      <section class="project-container">
+        <img src="images/Lighthouse.png" alt="music quiz" />
+        <h3>LightHouse</h3>
+        <p>
+          A marine weather app, showing conditions in Tampa Bay. Built using the
+          Storm Glass API. HTML , CSS , JavaScript , jQuery
+        </p>
+        <a href="https://challey17.github.io/LightHouse/" target="_blank"
+          >site</a
+        >
         <a href="https://github.com/challey17/Portfolio.git" target="_blank"
           >repo</a
         >
