expanded on proj descriptions

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
         <img src="images/think.png" alt="thinktank app" />
         <h3>ThinkTank</h3>
         <p>
-          A full-stack platform for creating and studying flashcards. React,
-          Node.js, Express.js, Knex, Mocha, Chai, RESTful API Endpoints, JWT,
-          PostgresSQL
+          A full-stack platform for creating and studying flashcards. Users can
+          create an account and save, edit or delete unlimited decks of
+          flashcards.Created with: React, Node.js, Express.js, Knex, Mocha,
+          Chai, RESTful API Endpoints, JWT, PostgresSQL
         </p>
         <a href="https://thinktank-client.vercel.app/" target="_blank">site</a>
         <a href="https://github.com/challey17/thinktank-client" target="_blank"
@@ -53,11 +54,11 @@
         <img src="images/showerthoughts.png" alt="shower-thoughts" />
         <h3>Shower Thoughts</h3>
         <p>
-          A social media platform based around anonymous data. "Shower thougts"
-          are brief, usually funny, observations about life. Users can create
-          posts without a login, posts are saved on the back end. React,
-          Node.js, Express.js, Knex, Mocha, Chai, RESTful API Endpoints,
-          PostgresSQL
+          A full-stack social media platform based around anonymous data.
+          "Shower thoughts" are brief, usually funny, observations about life.
+          Users can create posts without a login, posts are saved on the back
+          end.Created with: React, Node.js, Express.js, Knex, Mocha, Chai,
+          RESTful API Endpoints, PostgresSQL
         </p>
         <a href="https://showerthoughts-client.vercel.app/" target="_blank"
           >site</a
@@ -72,8 +73,10 @@
         <img src="images/Lighthouse.png" alt="music quiz" />
         <h3>LightHouse</h3>
         <p>
-          A marine weather app, showing conditions in Tampa Bay. Built using the
-          Storm Glass API. HTML , CSS , JavaScript , jQuery
+          A marine weather app, showing conditions in Tampa Bay. Users can
+          search conditions at specific times in order to plan there trip on the
+          water. This would be ideal for sailing, surfing, or any watersport.
+          Built using the Storm Glass API. HTML , CSS , JavaScript , jQuery
         </p>
         <a href="https://challey17.github.io/LightHouse/" target="_blank"
           >site</a
