--- a/about.html
+++ b/about.html
@@ -34,10 +34,9 @@
         <hr />
         <p>
           My goal is to create intelligent well-designed applications that work
-          at a high level and offer ease of use and accessibility. Something
-          about client side, server side when I know more about server side. I
-          am always eager to learn more by collaborating with a team of great
-          programmers or in my own projects.
+          at a high level and offer ease of use and accessibility. I am always
+          eager to learn more by collaborating with a team of great programmers
+          or in my own projects.
         </p>
         <p>
           I am also a musician and artist. Being creative has always been a big
