--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     </header>
     <main class="about-main">
       <section>
-        <h2>Contact</h2>
+        <h2>Contact Information</h2>
         <a href="mailto:chknaub@yahoo.com" target="_blank">email</a>
         <a href="https://www.linkedin.com/in/cknaub/" target="_blank"
           >linkedin</a
