updated project descriptions

--- a/index.html
+++ b/index.html
@@ -42,8 +42,16 @@
         <p>
           A full-stack platform for creating and studying flashcards. Users can
           create an account and save, edit or delete unlimited decks of
-          flashcards. Created with: React, Node.js, Express.js, Knex, Mocha,
-          Chai, RESTful API Endpoints, JWT, PostgresSQL
+          flashcards.I have wanted to build an app like this ever since I used a
+          similar application to learn spanish a few years ago. The convenience
+          of digital flahcards and the ability to edit cards as needed made a
+          huge impact on learning speed and retention. Think Tank would be ideal
+          for students but was created for anyone with a passion for learning.
+        </p>
+
+        <p>
+          Created with: React, Node.js, Express.js, Knex, Mocha, Chai, RESTful
+          API Endpoints, JWT, PostgresSQL
         </p>
         <a href="https://thinktank-client.vercel.app/" target="_blank">site</a>
         <a href="https://github.com/challey17/thinktank-client" target="_blank"
@@ -54,11 +62,20 @@
         <img src="images/showerthoughts.png" alt="shower-thoughts" />
         <h3>Shower Thoughts</h3>
         <p>
-          A full-stack social media platform based around anonymous data.
-          "Shower thoughts" are brief, usually funny, observations about life.
-          Users can create posts without a login, posts are saved on the back
-          end. Created with: React, Node.js, Express.js, Knex, Mocha, Chai,
-          RESTful API Endpoints, PostgresSQL
+          A full-stack social media platform dedicated to "shower thoughts" -
+          brief, often funny and insightful observations about life. "Shower
+          thoughts" is a popular hashtag across social media and also a
+          dedicated subreddit. Users can post shower thoughts as well as "like"
+          other posts from the community. I wanted to create a social media site
+          where data from the user communtity was kept anonymous and could be
+          used with without creating a login/password which is something I
+          haven't seen on a social media platform. By saving a unique Id in the
+          device local storage, users can access all the features of the site,
+          including seeing their own archived posts without creating an account.
+        </p>
+        <p>
+          Created with: React, Node.js, Express.js, Knex, Mocha, Chai, RESTful
+          API Endpoints, PostgresSQL
         </p>
         <a href="https://showerthoughts-client.vercel.app/" target="_blank"
           >site</a
@@ -74,10 +91,17 @@
         <h3>LightHouse</h3>
         <p>
           A marine weather app, showing conditions in Tampa Bay. Users can
-          search conditions at specific times in order to plan there trip on the
-          water. This would be ideal for sailing, surfing, or any watersport.
-          Built using the Storm Glass API. HTML , CSS , JavaScript , jQuery
+          search conditions at specific times in order to track how weather
+          conditions might change through out their trip on the water. The idea
+          for LightHouse developed after speaking with friends who uses weather
+          apps to plan sailing trips. The common refrain was that these apps had
+          a cumbersome user experience that were difficult to use and
+          understand. LightHouse was built to create a simple and useful way to
+          get the necessary and relevant information needed for a safe and happy
+          experience on the water. This app would be ideal for sailing, surfing,
+          or any watersport.
         </p>
+        <p>Built using the Storm Glass API. HTML , CSS , JavaScript , jQuery</p>
         <a href="https://challey17.github.io/LightHouse/" target="_blank"
           >site</a
         >
